# cpp-memory-performance

./: LICENSE  README.md
configure/: clang_debug.sh  clang_release.sh  gcc_debug.sh  gcc_release.sh
doc/: README.md  generate_plot.sh  plot_average.sh  plot_compare.sh  plot_config_foot.gnu  plot_config_head.gnu  plot_config_multi.gnu  prepare_all_plots.sh
doc/comparison/: README.md
doc/i7/: CLANG.md  GCC.md  README.md
doc/i7/clang/: array_st_data_plot.txt  array_st_data_raw.txt  cllist_mp_data_plot_proc_1.txt  cllist_mp_data_plot_proc_10.txt  cllist_mp_data_plot_proc_11.txt  cllist_mp_data_plot_proc_12.txt  cllist_mp_data_plot_proc_2.txt  cllist_mp_data_plot_proc_3.txt  cllist_mp_data_plot_proc_4.txt  cllist_mp_data_plot_proc_5.txt  cllist_mp_data_plot_proc_6.txt  cllist_mp_data_plot_proc_7.txt  cllist_mp_data_plot_proc_8.txt  cllist_mp_data_plot_proc_9.txt  cllist_mp_data_raw_proc_1.txt  cllist_mp_data_raw_proc_10.txt  cllist_mp_data_raw_proc_11.txt  cllist_mp_data_raw_proc_12.txt  cllist_mp_data_raw_proc_2.txt  cllist_mp_data_raw_proc_3.txt  cllist_mp_data_raw_proc_4.txt  cllist_mp_data_raw_proc_5.txt  cllist_mp_data_raw_proc_6.txt  cllist_mp_data_raw_proc_7.txt  cllist_mp_data_raw_proc_8.txt  cllist_mp_data_raw_proc_9.txt  cllist_mt_data_plot_core_1.txt  cllist_mt_data_plot_core_10.txt  cllist_mt_data_plot_core_11.txt  cllist_mt_data_plot_core_12.txt  cllist_mt_data_plot_core_2.txt  cllist_mt_data_plot_core_3.txt  cllist_mt_data_plot_core_4.txt  cllist_mt_data_plot_core_5.txt  cllist_mt_data_plot_core_6.txt  cllist_mt_data_plot_core_7.txt  cllist_mt_data_plot_core_8.txt  cllist_mt_data_plot_core_9.txt  cllist_mt_data_raw_core_1.txt  cllist_mt_data_raw_core_10.txt  (+66 more)
doc/i7/gcc/: array_st_data_plot.txt  array_st_data_raw.txt  cllist_mp_data_plot_proc_1.txt  cllist_mp_data_plot_proc_10.txt  cllist_mp_data_plot_proc_11.txt  cllist_mp_data_plot_proc_12.txt  cllist_mp_data_plot_proc_2.txt  cllist_mp_data_plot_proc_3.txt  cllist_mp_data_plot_proc_4.txt  cllist_mp_data_plot_proc_5.txt  cllist_mp_data_plot_proc_6.txt  cllist_mp_data_plot_proc_7.txt  cllist_mp_data_plot_proc_8.txt  cllist_mp_data_plot_proc_9.txt  cllist_mp_data_raw_proc_1.txt  cllist_mp_data_raw_proc_10.txt  cllist_mp_data_raw_proc_11.txt  cllist_mp_data_raw_proc_12.txt  cllist_mp_data_raw_proc_2.txt  cllist_mp_data_raw_proc_3.txt  cllist_mp_data_raw_proc_4.txt  cllist_mp_data_raw_proc_5.txt  cllist_mp_data_raw_proc_6.txt  cllist_mp_data_raw_proc_7.txt  cllist_mp_data_raw_proc_8.txt  cllist_mp_data_raw_proc_9.txt  cllist_mt_data_plot_core_1.txt  cllist_mt_data_plot_core_10.txt  cllist_mt_data_plot_core_11.txt  cllist_mt_data_plot_core_12.txt  cllist_mt_data_plot_core_2.txt  cllist_mt_data_plot_core_3.txt  cllist_mt_data_plot_core_4.txt  cllist_mt_data_plot_core_5.txt  cllist_mt_data_plot_core_6.txt  cllist_mt_data_plot_core_7.txt  cllist_mt_data_plot_core_8.txt  cllist_mt_data_plot_core_9.txt  cllist_mt_data_raw_core_1.txt  cllist_mt_data_raw_core_10.txt  (+66 more)
doc/i7_vbox_1/: GCC.md  README.md
doc/i7_vbox_1/clang/: array_st_data_plot.txt  array_st_data_raw.txt  cllist_mp_data_plot_proc_1.txt  cllist_mp_data_plot_proc_2.txt  cllist_mp_data_plot_proc_3.txt  cllist_mp_data_plot_proc_4.txt  cllist_mp_data_raw_proc_1.txt  cllist_mp_data_raw_proc_2.txt  cllist_mp_data_raw_proc_3.txt  cllist_mp_data_raw_proc_4.txt  cllist_mt_data_plot_core_1.txt  cllist_mt_data_plot_core_2.txt  cllist_mt_data_plot_core_3.txt  cllist_mt_data_plot_core_4.txt  cllist_mt_data_raw_core_1.txt  cllist_mt_data_raw_core_2.txt  cllist_mt_data_raw_core_3.txt  cllist_mt_data_raw_core_4.txt  cllist_st_data_plot.txt  cllist_st_data_raw.txt  cllist_st_small_data_plot.txt  cllist_st_small_data_raw.txt  raw_st_data_plot.txt  raw_st_data_raw.txt  vector_mp_data_plot_proc_1.txt  vector_mp_data_plot_proc_2.txt  vector_mp_data_plot_proc_3.txt  vector_mp_data_plot_proc_4.txt  vector_mp_data_raw_proc_1.txt  vector_mp_data_raw_proc_2.txt  vector_mp_data_raw_proc_3.txt  vector_mp_data_raw_proc_4.txt  vector_mt_data_plot_core_1.txt  vector_mt_data_plot_core_2.txt  vector_mt_data_plot_core_3.txt  vector_mt_data_plot_core_4.txt  vector_mt_data_raw_core_1.txt  vector_mt_data_raw_core_2.txt  vector_mt_data_raw_core_3.txt  vector_mt_data_raw_core_4.txt  (+2 more)
doc/i7_vbox_1/gcc/: array_st_data_plot.txt  array_st_data_raw.txt  cllist_mp_data_plot_proc_1.txt  cllist_mp_data_plot_proc_2.txt  cllist_mp_data_plot_proc_3.txt  cllist_mp_data_plot_proc_4.txt  cllist_mp_data_raw_proc_1.txt  cllist_mp_data_raw_proc_2.txt  cllist_mp_data_raw_proc_3.txt  (+33 more)
doc/i7_vbox_2/: CLANG.md  README.md
doc/measurements/: README.md
doc/rpi3/: CLANG.md  GCC.md  README.md
src/: CMakeCompileFlags.txt  CMakeLists.txt  cachegrind.sh.in
src/benchmark/: CMakeLists.txt  ContainerExperiment.h  ThreadedExperiment.h  benchmark.h  benchmark_avg.h  benchmark_log.h  benchmark_params.h  benchmark_print.h  benchmark_thread.h  benchmark_time.h  custom_outputter.h  prevent_optimization.h  test_benchmark_params.cpp  test_benchmark_print.cpp
src/cmake/: CMakeErase.cmake  CMakeUtils.cmake
src/mem_performance/: Array.h  ArrayExperiment.h  CMakeLists.txt  CustomLinkedList.h  ListExperiment.h  MemoryExperiment.h  array.h  bench_array.h  bench_list.h  benchmark_array.cpp  benchmark_array_st.cpp  benchmark_cllist.cpp  benchmark_cllist_mt.cpp  benchmark_cllist_small.cpp  benchmark_cllist_st.cpp  benchmark_cllist_st_small.cpp  benchmark_raw_st.cpp  benchmark_vector_mt.cpp  benchmark_vector_single.cpp  benchmark_vector_st.cpp  plot_all.sh  plot_cllist_mp.sh  plot_cllist_mt.sh  plot_config.gnu  plot_config_multi.gnu  plot_config_single.gnu  plot_mp.sh.in  plot_mt.sh.in  plot_single.sh.in  plot_st.sh.in  plot_vector_mp.sh  plot_vector_mt.sh  test_CustomLinkedList.cpp  test_stdthread.cpp  unroll.h
src/mem_performance/experiment/: benchmark_array_st.cpp  benchmark_cllist_mt.cpp  benchmark_cllist_st.cpp  benchmark_cllist_st_small.cpp  benchmark_raw_st.cpp  benchmark_vector_mt.cpp  benchmark_vector_st.cpp  plot_all.sh  plot_config_single.gnu  plot_mt.sh.in
src/test_utils/: CMakeLists.txt  test_all.cpp  testutils.h
(+1625 files in other folders)
